@@ -3484,8 +3484,9 @@ HttpTransact::handle_response_from_server(State* s)
 
   // plugin call
   s->server_info.state = s->current.state;
-  if (s->fp_tsremap_os_response)
+  if (s->fp_tsremap_os_response) {
     s->fp_tsremap_os_response(s->remap_plugin_instance, reinterpret_cast<TSHttpTxn>(s->state_machine), s->current.state);
+  }
 
   switch (s->current.state) {
   case CONNECTION_ALIVE:
